[package]
name = "tce"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Thermal Colorization Engine"

[dependencies]
ansi_term = "0.9"
clap = { version = "2.26", features = ["yaml"] }
irb = { path = "../irb-rs", features = ["irbacs-sys"] }
las = { path = "/Users/rdcrlpjg/Repos/las-rs" }
riscan-pro = { path = "/Users/rdcrlpjg/Repos/riscan-pro" }
scanifc = { path = "../rivlib-rs/scanifc" }
walkdir = "*"
