[package]
name = "tce"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Thermal Colorization Engine"

[dependencies]
ansi_term = "0.9"
clap = { version = "2.26", features = ["yaml"] }
irb = { git = "https://github.com/gadomski/irb-rs", features = ["irbacs-sys"] }
las = { git = "https://github.com/gadomski/las-rs" }
palette = "0.2"
riscan-pro = { git = "https://github.com/gadomski/riscan-pro" }
scanifc = { git = "https://github.com/gadomski/rivlib-rs" }
walkdir = "1.0"
